src/objects/npsp__General_Accounting_Unit__c.object
<CustomObject>
    <description>Accounting units used for allocating Opportunities.</description>
    <fields>
        <fullName>npsp__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Active general accounting units are available for selection on allocations. Inactive general accounting units can&apos;t have new allocations to them.</description>
        <inlineHelpText>Active general accounting units are available for selection on allocations. Inactive general accounting units can&apos;t have new allocations to them.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Average_Allocation__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The average of all allocations of all time to this general accounting unit.</description>
        <inlineHelpText>The average of all allocations of all time to this general accounting unit.</inlineHelpText>
        <label>Average Allocation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__Description__c</fullName>
        <description>Extra information about this general accounting unit.</description>
        <inlineHelpText>Extra information about this general accounting unit.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>npsp__First_Allocation_Date__c</fullName>
        <description>The first Opportunity Close Date of an allocation associated with this general accounting unit.</description>
        <inlineHelpText>The first Opportunity Close Date of an allocation associated with this general accounting unit.</inlineHelpText>
        <label>First Allocation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npsp__Largest_Allocation__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The largest allocation of all time to this general accounting unit.</description>
        <inlineHelpText>The largest allocation of all time to this general accounting unit.</inlineHelpText>
        <label>Largest Allocation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__Last_Allocation_Date__c</fullName>
        <description>The last Opportunity Close Date of an allocation associated with this general accounting unit.</description>
        <inlineHelpText>The last Opportunity Close Date of an allocation associated with this general accounting unit.</inlineHelpText>
        <label>Last Allocation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npsp__Number_of_Allocations_Last_N_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total number of allocations of opportunities in a closed and won stage in the last N days. The value of N can be modified in settings.</description>
        <inlineHelpText>Total number of allocations of opportunities in a closed and won stage in the last N days. The value of N can be modified in settings.</inlineHelpText>
        <label>Number of Allocations Last N Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Number_of_Allocations_Last_Year__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total number of allocations of opportunities in a closed and won stage last year.</description>
        <inlineHelpText>Total number of allocations of opportunities in a closed and won stage last year.</inlineHelpText>
        <label>Number of Allocations Last Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Number_of_Allocations_This_Year__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total number of allocations of opportunities in a closed and won stage this year.</description>
        <inlineHelpText>Total number of allocations of opportunities in a closed and won stage this year.</inlineHelpText>
        <label>Number of Allocations This Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Number_of_Allocations_Two_Years_Ago__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total number of allocations of opportunities in a closed and won stage two years ago.</description>
        <inlineHelpText>Total number of allocations of opportunities in a closed and won stage two years ago.</inlineHelpText>
        <label>Number of Allocations Two Years Ago</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Smallest_Allocation__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The smallest allocation of all time to this general accounting unit.</description>
        <inlineHelpText>The smallest allocation of all time to this general accounting unit.</inlineHelpText>
        <label>Smallest Allocation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__Total_Allocations_Last_N_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Sum total of all allocations of opportunities in a closed and won stage in the last N days. The value of N can be modified in settings.</description>
        <inlineHelpText>Sum total of all allocations of opportunities in a closed and won stage in the last N days. The value of N can be modified in settings.</inlineHelpText>
        <label>Total Allocations Last N Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__Total_Allocations_Last_Year__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Sum total of all allocations of opportunities in a closed and won stage last year.</description>
        <inlineHelpText>Sum total of all allocations of opportunities in a closed and won stage last year.</inlineHelpText>
        <label>Total Allocations Last Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__Total_Allocations_This_Year__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Sum total of all allocations of opportunities in a closed and won stage this year.</description>
        <inlineHelpText>Sum total of all allocations of opportunities in a closed and won stage this year.</inlineHelpText>
        <label>Total Allocations This Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__Total_Allocations_Two_Years_Ago__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Sum total of all allocations of opportunities in a closed and won stage two years ago.</description>
        <inlineHelpText>Sum total of all allocations of opportunities in a closed and won stage two years ago.</inlineHelpText>
        <label>Total Allocations Two Years Ago</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__Total_Allocations__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Sum total of all allocations of opportunities in a closed and won stage.</description>
        <inlineHelpText>Sum total of all allocations of opportunities in a closed and won stage.</inlineHelpText>
        <label>Total Allocations</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__Total_Number_of_Allocations__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total number of allocations of opportunities in a closed and won stage.</description>
        <inlineHelpText>Total number of allocations of opportunities in a closed and won stage.</inlineHelpText>
        <label>Total Number of Allocations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>General Accounting Unit</label>
    <listViews>
        <fullName>npsp__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>General Accounting Unit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>General Accounting Units</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>